--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -63,7 +63,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width:100vw;
+    width:100%;
     background-color: rgb(0, 0, 0);
 }
 
