--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -58,10 +58,10 @@
 
 
 .application-header {
-    padding: 10px;
+    padding: 20px;
     margin: 0 auto;    
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width:100%;
     background-color: rgb(0, 0, 0);
@@ -70,6 +70,30 @@
 .application-header > .logo-img {
 width:20%;
 height:5%;
+}
+
+.render-list {
+    padding: 10px;
+    display:flex;    
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.card{
+    
+    display:flex;
+    flex-direction: column;
+}
+
+.render-container{
+display: flex;
+flex-direction: column;
+}
+
+.productImg{
+    width: 40px;
+    height: 40px;
 }
 
 .search-forms {
@@ -96,9 +120,35 @@ display: flex;
    background-color: #F5F5F5;
 }
 
-
-
 .button-img{
  width:20px;
  height: 10px;
 }
+
+.cardStar {
+ width:20px;
+ height:20px;
+ border-color:rgba(255, 255, 0, 0.893);
+}
+
+
+@media (min-width: 768px) {
+    
+
+    .render-list{
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .search-div{
+        display: flex;
+        width: 200px;
+        height: 40px;
+        background-color: #F5F5F5;
+     }
+
+    
+
+}
+
