--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,14 +1,4 @@
-:root{
-   
-    --color-primary: #0bfd78;
-    --color-secondary: #EB5757;
-    
-    --grey-0:#F5F5F5;
-    --grey-1:#E0E0E0;
-    --grey-2:#828282;
-    --grey-3:black;
-    
- 
+:root{ 
     font-family: 'Roboto', sans-serif;
     
     }
@@ -67,7 +57,7 @@
     background-color: rgb(0, 0, 0);
 }
 
-.application-header > .logo-img {
+.logo-img {
 width:20%;
 height:5%;
 }
@@ -94,11 +84,6 @@ height:5%;
 margin-top: 40px;    
 display: flex;
 height: 500px;
-}
-
-.productImg{
-    width: 200px;
-    height: 90px;
 }
 
 .search-forms {
@@ -170,7 +155,8 @@ display: flex;
         background-color: #F5F5F5;
      }
     
-     .card{
+    
+   .card{
         width: 200px;
         height: 200px;
         display:flex;
@@ -179,6 +165,11 @@ display: flex;
         box-shadow: 0px 0px 30px -20px rgba(0, 0, 0, 0.25);
     }
 
+    .logo-img {
+        width:10%;
+        height:5%;
+        }
+        
     
 
 }
