--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -64,11 +64,12 @@ height:5%;
 
 .render-list {
     padding: 10px;
-    width: 320px;
+    width: 100%;
     height: 100%;
     display:flex;    
-    gap: 6px;
+    gap: 30px;
     overflow-x: auto;
+    
 }
 
 .card{
@@ -79,6 +80,19 @@ height:5%;
     gap: 10px;
     box-shadow: 0px 0px 30px -20px rgba(0, 0, 0, 0.25);
 }
+
+.cardImg{
+    width: 100%;
+}
+
+
+.cardimg{
+   width: 100%;
+   height: 60px; 
+
+
+}
+
 
 .render-container{
 margin-top: 40px;    
@@ -158,7 +172,7 @@ display: flex;
     
    .card{
         width: 200px;
-        height: 200px;
+        height: 180px;
         display:flex;
         flex-direction: column;
         gap: 10px;
