feat: fixed tyles

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -85,8 +85,6 @@ height:5%;
 .cardImg{
    width: 100%;
    height: auto; 
-
-
 }
 
 
@@ -139,12 +137,15 @@ display: flex;
 }
 
 .divRating{
-  display:flex;
-  gap: 5px;
+  display:flex;  
+  gap: 30px;
   align-items: center;
 }
 
-
+.reviewNumbers{
+color: rgb(0, 38, 255);
+font-size: x-small;
+}
 
 
 @media (min-width: 768px) {
@@ -185,6 +186,12 @@ display: flex;
         }
         
     
+    .divRating{
+            display:flex;
+            flex-direction: row;  
+            gap: 5px;
+            align-items: center;
+          }
 
 }
 
